# Skandal

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  README.md  Vagrantfile  bootstrap-dev-environemt.sh
src/: CMakeLists.txt  app.cpp  app.h  appinfo.h.in.cmake  main.cpp
src/imaging/: segmentation.cpp  segmentation.h
src/lightestimation/: lightdirestimation.cpp  lightdirestimation.h  ransac.cpp  ransac.h
src/reconstruction/: dataset.cpp  dataset.h  export.cpp  export.h  exportmesh.h  voxelcarving.cpp  voxelcarving.h
test/: CMakeLists.txt  main.cpp  sanity_check.cpp  test.h
tools/misc/: Skandal-Logo.eps
tools/share/cmake/: Findaruco.cmake
